objects/IntuitCustomObject__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>field2</label>
        <type>Checkbox</type>
    </fields>
    <label>IntuitCustomObject</label>
    <nameField>
        <label>IntuitCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntuitCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>